# academus-aed

./: CMakeLists.txt  app.c  app.h  main.c
controllers/: controller.c  course-controller.c  module-controller.c  professor-controller.c  subject-controller.c
controllers/headers/: course-controller.h  module-controller.h  professor-controller.h  subject-controller.h
models/: course.h  header.h  module.h  professor.h  subject.h
services/: course-service.c  module-service.c  professor-service.c  service.c  subject-service.c
services/headers/: course-service.h  module-service.h  professor-service.h  service.h  subject-service.h
utils/: file.c  header.c  list.c  utils.c  views.c
utils/headers/: file.h  header.h  list.h  utils.h  views.h
views/: course-view.c  module-view.c  professor-view.c  subject-view.c  views.c
views/headers/: course-view.h  module-view.h  professor-view.h  subject-view.h  views.h
